[gd_scene load_steps=33 format=2]

[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman11.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman12.png" type="Texture" id=3]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman7.png" type="Texture" id=4]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman8.png" type="Texture" id=5]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman9.png" type="Texture" id=6]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman10.png" type="Texture" id=7]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman1.png" type="Texture" id=8]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman2.png" type="Texture" id=9]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman3.png" type="Texture" id=10]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman4.png" type="Texture" id=11]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman5.png" type="Texture" id=12]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Gentleman6.png" type="Texture" id=13]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack2.png" type="Texture" id=14]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack1.png" type="Texture" id=15]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack4.png" type="Texture" id=16]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack5.png" type="Texture" id=17]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack6.png" type="Texture" id=18]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack3.png" type="Texture" id=19]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack7.png" type="Texture" id=20]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack8.png" type="Texture" id=21]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack_No_Arrow1.png" type="Texture" id=22]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack_No_Arrow2.png" type="Texture" id=23]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack_No_Arrow7.png" type="Texture" id=24]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack_No_Arrow3.png" type="Texture" id=25]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack_No_Arrow5.png" type="Texture" id=26]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack_No_Arrow8.png" type="Texture" id=27]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack_No_Arrow6.png" type="Texture" id=28]
[ext_resource path="res://100x100 spritesheet/Combined_Char/Attack/Attack_No_Arrow4.png" type="Texture" id=29]

[sub_resource type="CapsuleShape2D" id=14]
radius = 12.0
height = 14.0

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 10, 1.5 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 27 ) ],
"loop": true,
"name": "attack_no_arrow",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 14 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 1, 22 )
shape = SubResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "run"
frame = 4
playing = true

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 28, 0 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
